// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TagsSelect /> should create a new tag 1`] = `
Array [
  Array [
    Object {
      "name": "new",
    },
  ],
]
`;

exports[`<TagsSelect /> should render a single value 1`] = `
<div>
  SelectField Mock
  {
  "allowCustomValue": true,
  "options": [
    {
      "label": "billing",
      "value": "billing"
    },
    {
      "label": "refund",
      "value": "refund"
    },
    {
      "label": "question",
      "value": "question"
    }
  ],
  "placeholder": "Add a tag",
  "singular": "tag",
  "style": {
    "display": "inline-block"
  },
  "value": "billing"
}
  <input
    data-testid="on-change-input"
  />
</div>
`;

exports[`<TagsSelect /> when multiple is set to true should create new tags 1`] = `
Array [
  Array [
    Object {
      "name": "new",
    },
  ],
]
`;

exports[`<TagsSelect /> when multiple is set to true should render array as value 1`] = `
<div>
  MultiSelectField Mock
  {
  "allowCustomOptions": true,
  "options": [
    {
      "label": "billing",
      "value": "billing"
    },
    {
      "label": "refund",
      "value": "refund"
    },
    {
      "label": "question",
      "value": "question"
    }
  ],
  "singular": "tag",
  "plural": "tags",
  "style": {
    "display": "inline-block"
  },
  "selectedOptions": [
    {
      "label": "billing",
      "value": "billing"
    },
    {
      "label": "bugs",
      "value": "bugs"
    }
  ],
  "caseInsensitive": false,
  "loading": false
}
  <input
    data-testid="on-change-input"
  />
</div>
`;

exports[`<TagsSelect /> when multiple is set to true should render string as value 1`] = `
<div>
  MultiSelectField Mock
  {
  "allowCustomOptions": true,
  "options": [
    {
      "label": "billing",
      "value": "billing"
    },
    {
      "label": "refund",
      "value": "refund"
    },
    {
      "label": "question",
      "value": "question"
    }
  ],
  "singular": "tag",
  "plural": "tags",
  "style": {
    "display": "inline-block"
  },
  "selectedOptions": [
    {
      "label": "billing",
      "value": "billing"
    },
    {
      "label": "bugs",
      "value": "bugs"
    }
  ],
  "caseInsensitive": false,
  "loading": false
}
  <input
    data-testid="on-change-input"
  />
</div>
`;
